# lance

./: .env.example  CONTRIBUTING.md  Cargo.toml  DASHBOARD_AND_RUNBOOK_SUMMARY.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  FINAL_SUMMARY.md  GRAFANA_DASHBOARD_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_MONITORING.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INDEXER_IMPLEMENTATION_STATUS.md  MONITORING_COMPONENTS_OVERVIEW.md  MONITORING_DASHBOARD_QUICK_START.md  MONITORING_IMPLEMENTATION_SUMMARY.md  MONITORING_SETUP_SUMMARY.md  OPERATOR_QUICK_START.md  OPTIMIZATION_REPORT.md  PRODUCTION_RUNBOOK.md  PROMETHEUS_METRICS_IMPLEMENTATION.md  PULL_REQUEST_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_MONITORING_DASHBOARD.md  RPC_AND_HEALTH_CHECK_STATUS.md  SECURITY_ANALYSIS.md  STORAGE_IMPLEMENTATION_STATUS.md  STORAGE_OPTIMIZATION_BLUEPRINT.md  STRUCTURED_LOGGING_IMPLEMENTATION.md  TESTING_GUIDE.md  TESTS_SUMMARY.md  TEST_DOCUMENTATION.md  docker-compose.yml  frontend_logs.txt  grafana-custom-styles.css  grafana-dashboard.json  lanceFR.md  package-lock.json  package.json  (+6 more)
.github/: CODEOWNERS
backend/: .env  .env.example  .env.rpc.example  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  INDEXER_OPERATIONS.md  LEDGER_INDEXER.md  LOGGING_IMPLEMENTATION_SUMMARY.md  RPC_CLIENT.md  (+14 more)
backend/reconciliation-service/: Cargo.toml  Dockerfile  prometheus.yml
backend/reconciliation-service/migrations/: 20260428000001_initial.sql
backend/reconciliation-service/src/: config.rs  db.rs  main.rs  metrics.rs  models.rs  repository.rs  routes.rs  rpc.rs  worker.rs
(+573 files in other folders)
