[package]
name = "reconciliation-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reconciliation-service"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
axum               = { workspace = true }
chrono             = { workspace = true }
dotenvy            = { workspace = true }
prometheus         = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sqlx               = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
wiremock = "0.6"